2011-08-11    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/objects_collections.py (ContainerStatus):
	updated to new enum.

	* models/collection.ome.xml: added 'USED' to ContainerStatus.

	* bl/vl/kb/drivers/omero/data_samples.py
	(IlluminaBeadChipAssayType): updated to new enum.

	* models/data_sample.ome.xml: changed IlluminaBeadChipAssayType to
	more reasonable string values.

	* tests/bl/vl/kb/test_enums.py: added.

	* bl/vl/app/importer/titer_plate.py (Recorder.process_chunk): oops
	in the handling of barcodes.

	* tools/build_dependency.py (dump_dna_samples): bug fix. it was
	using a sample_label == label, which is not very useful.

2011-08-10    <zag@manzanillo>

	* bl/vl/app/importer/device.py (Recorder.do_consistency_checks):
	bug fix. It was rejecting devices with no barcode (it is legal,
	after all)

	* tools/build_dependency.py: another quick and dirty importer for
	Ilenia style csv. This one should be less lenient on ambiguos
	records. It makes extract_individuals.py and extract_samples.py
	obsolete.

2011-08-09    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.SNP_SET_COLS): Removed the field 'label'. This
	field, the label of the marker in the specific technological
	context (e.g., affy SNP_A_xxx codes, it redundant, since the
	marker is identified by the marker_vid, and it is dangerous, since
	it can generate confusion.

2011-08-08    <zag@manzanillo>

	* tests/bl/vl/kb/drivers/omero/test_table.py (TestProxyCore):
	added a test for the new get_table_rows selector type cases.

	* bl/vl/kb/drivers/omero/proxy_core.py (ProxyCore.get_table_rows):
	selector can now be either a selection or a list of selections. In
	the latter case, it is interpreted as an 'or' condition between
	the list elements.

	* bl/vl/kb/drivers/omero/genotyping.py (Marker): Added. It is only
	a placeholder for the time being.

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.get_snp_markers): we may
	want markers as standard objects, afterall...
