@@ -1,3 +1,13 @@
+2011-08-12    <zag@manzanillo>
+
+	* bl/vl/app/importer/data_sample.py (Recorder.process_chunk):
+	added an hack to deal with data reloads. It is really a quick hack.
+
+
+
+	* bl/vl/kb/drivers/omero/data_samples.py
+	(IlluminaBeadChipAssayType): Missing HUMAN1M_DUO constant.
+
 2011-08-11    <zag@manzanillo>
 
 	* bl/vl/kb/drivers/omero/objects_collections.py (ContainerStatus):
